Fix mobile layout width
Reset the `#jacket` overflow property to `hidden` to fix an issue
where something overflowed the content and squeezed it out of
proportion with the viewport width, rendering it unreadable at
small viewport widths.

--- a/src/scss/globals/_globals.scss
+++ b/src/scss/globals/_globals.scss
@@ -28,7 +28,7 @@ html {
 }
 
 #jacket {
-	overflow: visible; // Override Spine setting to fix `sticky` positioning.
+	overflow: hidden;
 }
 
 main,
