--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ html {
 }
 
 #jacket {
-  overflow: visible;
+  overflow: hidden;
 }
 
 main,
